--- a/speech_synthesis/CMakeLists.txt
+++ b/speech_synthesis/CMakeLists.txt
@@ -6,7 +6,7 @@ project(speech_synthesis)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
-  roboy_communication_cognition
+  roboy_cognition_msgs
   std_msgs
 )
 
@@ -14,7 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
  # INCLUDE_DIRS include
 #  LIBRARIES speech_synthesis
-  CATKIN_DEPENDS  rospy roboy_communication_cognition std_msgs
+  CATKIN_DEPENDS  rospy roboy_cognition_msgs std_msgs
 #  DEPENDS system_lib
 )
 
